--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,12 @@ hs_err_pid*
 *.ipr
 *.iws
 java-pattern/target/
-# 备注：在首次提交本地项目到github的时候可能会报错，常用错误如下。
+#备注：在首次提交本地项目到github的时候可能会报错，常用错误如下。
 #错误一：git remote add origin https://github.com/XXX/XX 报错 remote origin already exists. 这是因为你本地配置了git的全局配置remote地址origin通过
-# 命令git config --local -e 查看并修改就行
+#命令git config --local -e 查看并修改就行
 #错误二：failed to push some refs to 'https://github.com/***/***' 这是因为本地资源和github 不同步 需要 git pull origin master 下来先
 #错误三：fatal: refusing to merge unrelated histories 这是因为日志不同步，需要添加 --allow-unrelated-histories参数
-# 至此 应该就可以正常把本地资源同步到github了
+#至此应该就可以正常把本地资源同步到github了
 #
-#
+#git rm -r --cached XXX  解决 添加忽略文件无效的情况，原因是：对应的目录或者文件已经被git跟踪，此时再加入.gitignore后就无效了
 #
