--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
 
     <groupId>java-pattern</groupId>
     <artifactId>com.ikaimen</artifactId>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
