--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ hs_err_pid*
 *.iml
 *.ipr
 *.iws
-java-pattern/target/
+target
 #备注：在首次提交本地项目到github的时候可能会报错，常用错误如下。
 #错误一：git remote add origin https://github.com/XXX/XX 报错 remote origin already exists. 这是因为你本地配置了git的全局配置remote地址origin通过
 #命令git config --local -e 查看并修改就行
