添加测试代码

--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>java-pattern</groupId>
+    <artifactId>com.ikaimen</artifactId>
+
     <properties>
         <guava.version>20.0</guava.version>
         <mongodb-drive.version>3.6.3</mongodb-drive.version>
+        <protostuff.version>1.6.0</protostuff.version>
     </properties>
-    <groupId>java-pattern</groupId>
-    <artifactId>com.ikaimen</artifactId>
     <dependencies>
+
+        <!--序列化工具-->
+        <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-core -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>${protostuff.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-runtime -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>${protostuff.version}</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
@@ -92,6 +112,14 @@
                 <!--</exclusion>-->
             <!--</exclusions>-->
         <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.39.Final</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
